--- a/styles.css
+++ b/styles.css
@@ -324,10 +324,20 @@ nav {
     cursor: pointer;
 }
 
-.research {
+.research,
+body {
   background-image: linear-gradient(
         to bottom,
-        rgba(255, 255, 255, 0.781),
+        rgba(255, 255, 255, 0.692),
+        transparent
+    );
+}
+
+.funding,
+body {
+  background-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0.692),
         transparent
     );
 }
